--- a/forecast.html
+++ b/forecast.html
@@ -84,8 +84,9 @@
         </div>
     </div>
 </div>
-<footer>This App was built by <a href="#">Vicky</a></footer>
+<footer><a href="https://github.com/adevicky/Weather-forecast">Open-source code</a> by Vicky</footer>
 </div>
+
 <script src="src/index.js"></script>
 </body>
 </html>
